Implement GlobalExceptionHandler, start testing